src/objects/Sales_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Milestone_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Milestone Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <formula>TEXT( Sales_Order__r.Billing_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Reference_Number__c</fullName>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Milestone Reference Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Milestone_Revenue__c</fullName>
        <label>Planned Milestone Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completely Invoiced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Rate__c</fullName>
        <label>Unit Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Item</label>
    <nameField>
        <label>Sales Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Status_cant_be_made_Pending_without_Plan</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISBLANK(Planned_Date__c), ISPICKVAL( Status__c ,&apos;Pending&apos;))</errorConditionFormula>
        <errorDisplayField>Planned_Date__c</errorDisplayField>
        <errorMessage>Status cannot be made Pending without a Planned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_completed_Actual_date_Mandatory</fullName>
        <active>false</active>
        <description>If Milestone Status is Complete then Actual date should be Populated.</description>
        <errorConditionFormula>AND(ISPICKVAL(  Status__c , &apos;Completed&apos;) , ISNULL( Actual_Date__c ))</errorConditionFormula>
        <errorDisplayField>Actual_Date__c</errorDisplayField>
        <errorMessage>Actual Date Is Needed If Status Is Completed</errorMessage>
    </validationRules>
</CustomObject>